Bug 1279493 - Use blob URLs exclusively rather than having mediastream and mediasource URLs, r=smaug