dom/base/nsHostObjectProtocolHandler.cpp
@@ -25,7 +25,9 @@
 #include "nsIUUIDGenerator.h"
 #include "nsNetUtil.h"
 
+using mozilla::DOMMediaStream;
 using mozilla::dom::BlobImpl;
+using mozilla::dom::MediaSource;
 using mozilla::ErrorResult;
 using mozilla::net::LoadInfo;
 
@@ -33,8 +35,36 @@ using mozilla::net::LoadInfo;
 // Hash table
 struct DataInfo
 {
-  // mObject is expected to be an BlobImpl, DOMMediaStream, or MediaSource
-  nsCOMPtr<nsISupports> mObject;
+  enum ObjectType {
+    eBlobImpl,
+    eMediaStream,
+    eMediaSource
+  };
+
+  DataInfo(BlobImpl* aBlobImpl, nsIPrincipal* aPrincipal)
+    : mObjectType(eBlobImpl)
+    , mBlobImpl(aBlobImpl)
+    , mPrincipal(aPrincipal)
+  {}
+
+  DataInfo(DOMMediaStream* aMediaStream, nsIPrincipal* aPrincipal)
+    : mObjectType(eMediaStream)
+    , mMediaStream(aMediaStream)
+    , mPrincipal(aPrincipal)
+  {}
+
+  DataInfo(MediaSource* aMediaSource, nsIPrincipal* aPrincipal)
+    : mObjectType(eMediaSource)
+    , mMediaSource(aMediaSource)
+    , mPrincipal(aPrincipal)
+  {}
+
+  ObjectType mObjectType;
+
+  RefPtr<BlobImpl> mBlobImpl;
+  RefPtr<DOMMediaStream> mMediaStream;
+  RefPtr<MediaSource> mMediaSource;
+
   nsCOMPtr<nsIPrincipal> mPrincipal;
   nsCString mStack;
 };
@@ -70,6 +100,21 @@ GetDataInfo(const nsACString& aUri)
   }
 
   return res;
+}
+static DataInfo*
+GetDataInfoFromURI(nsIURI* aURI)
+{
+  if (!aURI) {
+    return nullptr;
+  }
+
+  nsCString spec;
+  nsresult rv = aURI->GetSpec(spec);
+  if (NS_WARN_IF(NS_FAILED(rv))) {
+    return nullptr;
+  }
+
+  return GetDataInfo(spec);
 }
 
 // Memory reporting for the hash table.
@@ -150,18 +195,24 @@ class BlobURLsReporter final : public nsIMemoryReporter
 
     // Determine number of URLs per BlobImpl, to handle the case where it's > 1.
     for (auto iter = gDataTable->Iter(); !iter.Done(); iter.Next()) {
-      nsCOMPtr<BlobImpl> blobImpl = do_QueryInterface(iter.UserData()->mObject);
-      if (blobImpl) {
-        refCounts.Put(blobImpl, refCounts.Get(blobImpl) + 1);
+      if (iter.UserData()->mObjectType != DataInfo::eBlobImpl) {
+        continue;
       }
+
+      BlobImpl* blobImpl = iter.UserData()->mBlobImpl;
+      MOZ_ASSERT(blobImpl);
+
+      refCounts.Put(blobImpl, refCounts.Get(blobImpl) + 1);
     }
 
     for (auto iter = gDataTable->Iter(); !iter.Done(); iter.Next()) {
       nsCStringHashKey::KeyType key = iter.Key();
       DataInfo* info = iter.UserData();
 
-      nsCOMPtr<BlobImpl> blobImpl = do_QueryInterface(iter.UserData()->mObject);
-      if (blobImpl) {
+      if (iter.UserData()->mObjectType == DataInfo::eBlobImpl) {
+        BlobImpl* blobImpl = iter.UserData()->mBlobImpl;
+        MOZ_ASSERT(blobImpl);
+
         NS_NAMED_LITERAL_CSTRING(desc,
           "A blob URL allocated with URL.createObjectURL; the referenced "
           "blob cannot be freed until all URLs for it have been explicitly "
@@ -234,27 +285,22 @@ class BlobURLsReporter final : public nsIMemoryReporter
               descString,
               aData);
         }
-      } else {
-        // Just report the path for the DOMMediaStream or MediaSource.
-        nsCOMPtr<mozilla::dom::MediaSource>
-          ms(do_QueryInterface(info->mObject));
-        nsAutoCString path;
-        path = ms ? "media-source-urls/" : "dom-media-stream-urls/";
-        BuildPath(path, key, info, aAnonymize);
-
-        NS_NAMED_LITERAL_CSTRING(desc,
-          "An object URL allocated with URL.createObjectURL; the referenced "
-          "data cannot be freed until all URLs for it have been explicitly "
-          "invalidated with URL.revokeObjectURL.");
-
-        aCallback->Callback(EmptyCString(),
-            path,
-            KIND_OTHER,
-            UNITS_COUNT,
-            1,
-            desc,
-            aData);
+        continue;
       }
+
+      // Just report the path for the DOMMediaStream or MediaSource.
+      nsAutoCString path;
+      path = iter.UserData()->mObjectType == DataInfo::eMediaSource
+               ? "media-source-urls/" : "dom-media-stream-urls/";
+      BuildPath(path, key, info, aAnonymize);
+
+      NS_NAMED_LITERAL_CSTRING(desc,
+        "An object URL allocated with URL.createObjectURL; the referenced "
+        "data cannot be freed until all URLs for it have been explicitly "
+        "invalidated with URL.revokeObjectURL.");
+
+      aCallback->Callback(EmptyCString(), path, KIND_OTHER, UNITS_COUNT, 1,
+                          desc, aData);
     }
 
     return NS_OK;
@@ -370,6 +416,22 @@ NS_IMPL_ISUPPORTS(BlobURLsReporter, nsIMemoryReporter)
 
 } // namespace mozilla
 
+template<typename T>
+static nsresult
+AddDataEntryInternal(const nsACString& aURI, T aObject,
+                     nsIPrincipal* aPrincipal)
+{
+  if (!gDataTable) {
+    gDataTable = new nsClassHashtable<nsCStringHashKey, DataInfo>;
+  }
+
+  DataInfo* info = new DataInfo(aObject, aPrincipal);
+  mozilla::BlobURLsReporter::GetJSStackForBlob(info);
+
+  gDataTable->Put(aURI, info);
+  return NS_OK;
+}
+
 void
 nsHostObjectProtocolHandler::Init(void)
 {
@@ -387,56 +449,61 @@ nsHostObjectProtocolHandler::nsHostObjectProtocolHandler()
   Init();
 }
 
-nsresult
-nsHostObjectProtocolHandler::AddDataEntry(const nsACString& aScheme,
-                                          nsISupports* aObject,
+/* static */ nsresult
+nsHostObjectProtocolHandler::AddDataEntry(BlobImpl* aBlobImpl,
                                           nsIPrincipal* aPrincipal,
                                           nsACString& aUri)
 {
-#ifdef DEBUG
-  {
-    nsCOMPtr<BlobImpl> blobImpl(do_QueryInterface(aObject));
-    nsCOMPtr<MediaSource> mediaSource(do_QueryInterface(aObject));
-    nsCOMPtr<DOMMediaStream> mediaStream(do_QueryInterface(aObject));
-
-    // We support only these types.
-    MOZ_ASSERT(blobImpl || mediaSource || mediaStream);
-  }
-#endif
-
   Init();
 
-  nsresult rv = GenerateURIString(aScheme, aPrincipal, aUri);
+  nsresult rv = GenerateURIStringForBlobURL(aPrincipal, aUri);
   NS_ENSURE_SUCCESS(rv, rv);
 
-  rv = AddDataEntry(aUri, aObject, aPrincipal);
+  rv = AddDataEntryInternal(aUri, aBlobImpl, aPrincipal);
   NS_ENSURE_SUCCESS(rv, rv);
 
-  nsCOMPtr<BlobImpl> blobImpl = do_QueryInterface(aObject);
-  if (blobImpl) {
-    BroadcastBlobURLRegistration(aUri, blobImpl, aPrincipal);
-  }
+  BroadcastBlobURLRegistration(aUri, aBlobImpl, aPrincipal);
+  return NS_OK;
+}
+
+/* static */ nsresult
+nsHostObjectProtocolHandler::AddDataEntry(DOMMediaStream* aMediaStream,
+                                          nsIPrincipal* aPrincipal,
+                                          nsACString& aUri)
+{
+  Init();
+
+  nsresult rv = GenerateURIStringForBlobURL(aPrincipal, aUri);
+  NS_ENSURE_SUCCESS(rv, rv);
+
+  rv = AddDataEntryInternal(aUri, aMediaStream, aPrincipal);
+  NS_ENSURE_SUCCESS(rv, rv);
+
+  return NS_OK;
+}
+
+/* static */ nsresult
+nsHostObjectProtocolHandler::AddDataEntry(MediaSource* aMediaSource,
+                                          nsIPrincipal* aPrincipal,
+                                          nsACString& aUri)
+{
+  Init();
+
+  nsresult rv = GenerateURIStringForBlobURL(aPrincipal, aUri);
+  NS_ENSURE_SUCCESS(rv, rv);
+
+  rv = AddDataEntryInternal(aUri, aMediaSource, aPrincipal);
+  NS_ENSURE_SUCCESS(rv, rv);
 
   return NS_OK;
 }
 
 /* static */ nsresult
 nsHostObjectProtocolHandler::AddDataEntry(const nsACString& aURI,
-                                          nsISupports* aObject,
-                                          nsIPrincipal* aPrincipal)
+                                          nsIPrincipal* aPrincipal,
+                                          mozilla::dom::BlobImpl* aBlobImpl)
 {
-  if (!gDataTable) {
-    gDataTable = new nsClassHashtable<nsCStringHashKey, DataInfo>;
-  }
-
-  DataInfo* info = new DataInfo;
-
-  info->mObject = aObject;
-  info->mPrincipal = aPrincipal;
-  mozilla::BlobURLsReporter::GetJSStackForBlob(info);
-
-  gDataTable->Put(aURI, info);
-  return NS_OK;
+  return AddDataEntryInternal(aURI, aBlobImpl, aPrincipal);
 }
 
 /* static */ bool
@@ -453,12 +520,12 @@ nsHostObjectProtocolHandler::GetAllBlobURLEntries(nsTArray<BlobURLRegistrationDa
     DataInfo* info = iter.UserData();
     MOZ_ASSERT(info);
 
-    nsCOMPtr<BlobImpl> blobImpl = do_QueryInterface(info->mObject);
-    if (!blobImpl) {
+    if (info->mObjectType != DataInfo::eBlobImpl) {
       continue;
     }
 
-    PBlobParent* blobParent = aCP->GetOrCreateActorForBlobImpl(blobImpl);
+    MOZ_ASSERT(info->mBlobImpl);
+    PBlobParent* blobParent = aCP->GetOrCreateActorForBlobImpl(info->mBlobImpl);
     if (!blobParent) {
       return false;
     }
@@ -484,11 +551,8 @@ nsHostObjectProtocolHandler::RemoveDataEntry(const nsACString& aUri,
     return;
   }
 
-  if (aBroadcastToOtherProcesses) {
-    nsCOMPtr<BlobImpl> blobImpl = do_QueryInterface(info->mObject);
-    if (blobImpl) {
-      BroadcastBlobURLUnregistration(aUri, info);
-    }
+  if (aBroadcastToOtherProcesses && info->mObjectType == DataInfo::eBlobImpl) {
+    BroadcastBlobURLUnregistration(aUri, info);
   }
 
   gDataTable->Remove(aUri);
@@ -548,6 +612,14 @@ nsHostObjectProtocolHandler::GenerateURIString(const nsACString &aScheme,
   return NS_OK;
 }
 
+nsresult
+nsHostObjectProtocolHandler::GenerateURIStringForBlobURL(nsIPrincipal* aPrincipal,
+                                                         nsACString& aUri)
+{
+  return
+    GenerateURIString(NS_LITERAL_CSTRING(BLOBURI_SCHEME), aPrincipal, aUri);
+}
+
 nsIPrincipal*
 nsHostObjectProtocolHandler::GetDataEntryPrincipal(const nsACString& aUri)
 {
@@ -578,23 +650,14 @@ nsHostObjectProtocolHandler::Traverse(const nsACString& aUri,
     return;
   }
 
-  NS_CYCLE_COLLECTION_NOTE_EDGE_NAME(aCallback, "HostObjectProtocolHandler DataInfo.mObject");
-  aCallback.NoteXPCOMChild(res->mObject);
-}
+  NS_CYCLE_COLLECTION_NOTE_EDGE_NAME(aCallback, "HostObjectProtocolHandler DataInfo.mBlobImpl");
+  aCallback.NoteXPCOMChild(res->mBlobImpl);
 
-static nsISupports*
-GetDataObjectForSpec(const nsACString& aSpec)
-{
-  DataInfo* info = GetDataInfo(aSpec);
-  return info ? info->mObject : nullptr;
-}
+  NS_CYCLE_COLLECTION_NOTE_EDGE_NAME(aCallback, "HostObjectProtocolHandler DataInfo.mMediaSource");
+  aCallback.NoteXPCOMChild(res->mMediaSource);
 
-static nsISupports*
-GetDataObject(nsIURI* aURI)
-{
-  nsCString spec;
-  aURI->GetSpec(spec);
-  return GetDataObjectForSpec(spec);
+  NS_CYCLE_COLLECTION_NOTE_EDGE_NAME(aCallback, "HostObjectProtocolHandler DataInfo.mMediaStream");
+  aCallback.NoteXPCOMChild(res->mMediaStream);
 }
 
 // -----------------------------------------------------------------------
@@ -629,9 +692,9 @@ nsHostObjectProtocolHandler::NewURI(const nsACString& aSpec,
   DataInfo* info = GetDataInfo(aSpec);
 
   RefPtr<nsHostObjectURI> uri;
-  if (info) {
-    nsCOMPtr<BlobImpl> blob = do_QueryInterface(info->mObject);
-    uri = new nsHostObjectURI(info->mPrincipal, blob);
+  if (info && info->mObjectType == DataInfo::eBlobImpl) {
+    MOZ_ASSERT(info->mBlobImpl);
+    uri = new nsHostObjectURI(info->mPrincipal, info->mBlobImpl);
   } else {
     uri = new nsHostObjectURI(nullptr, nullptr);
   }
@@ -665,10 +728,7 @@ nsHostObjectProtocolHandler::NewChannel2(nsIURI* uri,
   }
 
 #ifdef DEBUG
-  nsCString spec;
-  uri->GetSpec(spec);
-
-  DataInfo* info = GetDataInfo(spec);
+  DataInfo* info = GetDataInfoFromURI(uri);
 
   // Info can be null, in case this blob URL has been revoked already.
   if (info) {
@@ -743,20 +803,6 @@ nsBlobProtocolHandler::GetScheme(nsACString &result)
 }
 
 NS_IMETHODIMP
-nsMediaStreamProtocolHandler::GetScheme(nsACString &result)
-{
-  result.AssignLiteral(MEDIASTREAMURI_SCHEME);
-  return NS_OK;
-}
-
-NS_IMETHODIMP
-nsMediaSourceProtocolHandler::GetScheme(nsACString &result)
-{
-  result.AssignLiteral(MEDIASOURCEURI_SCHEME);
-  return NS_OK;
-}
-
-NS_IMETHODIMP
 nsFontTableProtocolHandler::GetScheme(nsACString &result)
 {
   result.AssignLiteral(FONTTABLEURI_SCHEME);
@@ -770,11 +816,12 @@ NS_GetBlobForBlobURI(nsIURI* aURI, BlobImpl** aBlob)
 
   *aBlob = nullptr;
 
-  nsCOMPtr<BlobImpl> blob = do_QueryInterface(GetDataObject(aURI));
-  if (!blob) {
+  DataInfo* info = GetDataInfoFromURI(aURI);
+  if (!info || info->mObjectType != DataInfo::eBlobImpl) {
     return NS_ERROR_DOM_BAD_URI;
   }
 
+  RefPtr<BlobImpl> blob = info->mBlobImpl;
   blob.forget(aBlob);
   return NS_OK;
 }
@@ -784,11 +831,12 @@ NS_GetBlobForBlobURISpec(const nsACString& aSpec, BlobImpl** aBlob)
 {
   *aBlob = nullptr;
 
-  nsCOMPtr<BlobImpl> blob = do_QueryInterface(GetDataObjectForSpec(aSpec));
-  if (!blob) {
+  DataInfo* info = GetDataInfo(aSpec);
+  if (!info || info->mObjectType != DataInfo::eBlobImpl) {
     return NS_ERROR_DOM_BAD_URI;
   }
 
+  RefPtr<BlobImpl> blob = info->mBlobImpl;
   blob.forget(aBlob);
   return NS_OK;
 }
@@ -816,13 +864,14 @@ NS_GetStreamForMediaStreamURI(nsIURI* aURI, mozilla::DOMMediaStream** aStream)
 {
   NS_ASSERTION(IsMediaStreamURI(aURI), "Only call this with mediastream URIs");
 
-  nsISupports* dataObject = GetDataObject(aURI);
-  if (!dataObject) {
+  DataInfo* info = GetDataInfoFromURI(aURI);
+  if (!info || info->mObjectType != DataInfo::eMediaStream) {
     return NS_ERROR_DOM_BAD_URI;
   }
 
-  *aStream = nullptr;
-  return CallQueryInterface(dataObject, aStream);
+  RefPtr<DOMMediaStream> mediaStream = info->mMediaStream;
+  mediaStream.forget(aStream);
+  return NS_OK;
 }
 
 NS_IMETHODIMP
@@ -865,12 +914,13 @@ NS_GetSourceForMediaSourceURI(nsIURI* aURI, mozilla::dom::MediaSource** aSource)
 
   *aSource = nullptr;
 
-  nsCOMPtr<mozilla::dom::MediaSource> source = do_QueryInterface(GetDataObject(aURI));
-  if (!source) {
+  DataInfo* info = GetDataInfoFromURI(aURI);
+  if (!info || info->mObjectType != DataInfo::eMediaSource) {
     return NS_ERROR_DOM_BAD_URI;
   }
 
-  source.forget(aSource);
+  RefPtr<MediaSource> mediaSource = info->mMediaSource;
+  mediaSource.forget(aSource);
   return NS_OK;
 }
 
@@ -878,40 +928,24 @@ NS_GetSourceForMediaSourceURI(nsIURI* aURI, mozilla::dom::MediaSource** aSource)
 { 0xb43964aa, 0xa078, 0x44b2, \
   { 0xb0, 0x6b, 0xfd, 0x4d, 0x1b, 0x17, 0x2e, 0x66 } }
 
-#define NS_MEDIASTREAMPROTOCOLHANDLER_CID \
-{ 0x27d1fa24, 0x2b73, 0x4db3, \
-  { 0xab, 0x48, 0xb9, 0x83, 0x83, 0x40, 0xe0, 0x81 } }
-
-#define NS_MEDIASOURCEPROTOCOLHANDLER_CID \
-{ 0x12ef31fc, 0xa8fb, 0x4661, \
-  { 0x9a, 0x63, 0xfb, 0x61, 0x04,0x5d, 0xb8, 0x61 } }
-
 #define NS_FONTTABLEPROTOCOLHANDLER_CID \
 { 0x3fc8f04e, 0xd719, 0x43ca, \
   { 0x9a, 0xd0, 0x18, 0xee, 0x32, 0x02, 0x11, 0xf2 } }
 
 NS_GENERIC_FACTORY_CONSTRUCTOR(nsBlobProtocolHandler)
-NS_GENERIC_FACTORY_CONSTRUCTOR(nsMediaStreamProtocolHandler)
-NS_GENERIC_FACTORY_CONSTRUCTOR(nsMediaSourceProtocolHandler)
 NS_GENERIC_FACTORY_CONSTRUCTOR(nsFontTableProtocolHandler)
 
 NS_DEFINE_NAMED_CID(NS_BLOBPROTOCOLHANDLER_CID);
-NS_DEFINE_NAMED_CID(NS_MEDIASTREAMPROTOCOLHANDLER_CID);
-NS_DEFINE_NAMED_CID(NS_MEDIASOURCEPROTOCOLHANDLER_CID);
 NS_DEFINE_NAMED_CID(NS_FONTTABLEPROTOCOLHANDLER_CID);
 
 static const mozilla::Module::CIDEntry kHostObjectProtocolHandlerCIDs[] = {
   { &kNS_BLOBPROTOCOLHANDLER_CID, false, nullptr, nsBlobProtocolHandlerConstructor },
-  { &kNS_MEDIASTREAMPROTOCOLHANDLER_CID, false, nullptr, nsMediaStreamProtocolHandlerConstructor },
-  { &kNS_MEDIASOURCEPROTOCOLHANDLER_CID, false, nullptr, nsMediaSourceProtocolHandlerConstructor },
   { &kNS_FONTTABLEPROTOCOLHANDLER_CID, false, nullptr, nsFontTableProtocolHandlerConstructor },
   { nullptr }
 };
 
 static const mozilla::Module::ContractIDEntry kHostObjectProtocolHandlerContracts[] = {
   { NS_NETWORK_PROTOCOL_CONTRACTID_PREFIX BLOBURI_SCHEME, &kNS_BLOBPROTOCOLHANDLER_CID },
-  { NS_NETWORK_PROTOCOL_CONTRACTID_PREFIX MEDIASTREAMURI_SCHEME, &kNS_MEDIASTREAMPROTOCOLHANDLER_CID },
-  { NS_NETWORK_PROTOCOL_CONTRACTID_PREFIX MEDIASOURCEURI_SCHEME, &kNS_MEDIASOURCEPROTOCOLHANDLER_CID },
   { NS_NETWORK_PROTOCOL_CONTRACTID_PREFIX FONTTABLEURI_SCHEME, &kNS_FONTTABLEPROTOCOLHANDLER_CID },
   { nullptr }
 };
@@ -924,3 +958,27 @@ static const mozilla::Module kHostObjectProtocolHandlerModule = {
 
 NSMODULE_DEFN(HostObjectProtocolHandler) = &kHostObjectProtocolHandlerModule;
 
+bool IsType(nsIURI* aUri, DataInfo::ObjectType aType)
+{
+  DataInfo* info = GetDataInfoFromURI(aUri);
+  if (!info) {
+    return false;
+  }
+
+  return info->mObjectType == aType;
+}
+
+bool IsBlobURI(nsIURI* aUri)
+{
+  return IsType(aUri, DataInfo::eBlobImpl);
+}
+
+bool IsMediaStreamURI(nsIURI* aUri)
+{
+  return IsType(aUri, DataInfo::eMediaStream);
+}
+
+bool IsMediaSourceURI(nsIURI* aUri)
+{
+  return IsType(aUri, DataInfo::eMediaSource);
+}
